Feat/met 6467 abstract engine connection (#11)
* MET-6467 First engine abstraction attempt

* MET-6467 Abstract settings and configuration better

* MET-6467 Cleanup

* MET-6467 Extract execution from model classes

* MET-6467 Use ProcessingEngineTaskKeys for parameters

* MET-6467 Create PluginMonitor class for abstraction.

* MET-6467 Move and update convertToProcessingEngineTaskProgress

* MET-6467 Cleanup

* MET-6467 Move cancel functionality to PluginMonitor

* MET-6467 Update namings

* MET-6467 Abstract input data parameters

* MET-6467 Cleanup

* MET-6467 Fix generics

* MET-6467 Duplicate engine to mock for testing injection

* MET-6467 Fix generics on beans

* MET-6467 Concrete EngineTaskConfigurator

* MET-6467 Simplify WorkflowExecutorSettings

* MET-6467 Migrate ecloud clients to EngineTaskClient

* MET-6467 Abstract ecloud dataset id creation

* MET-6467 Fix record search

* MET-6467 Merge code duplication for record statistics

* MET-6467 Configurable engine

* MET-6467 Renaming and apply generics on queueconsumer

* MET-6467 Cleanup

* MET-6467 Renaming cleanup

* MET-6467 Refactor

* MET-6467 Enforce parameters for EngineTaskSettings

* MET-6467 RecordStatistics structure renaming RecordStatisticsDTO

* MET-6467 Sonar issues

* MET-6467 Sonar issues

* MET-6467 long to String taskId

* MET-6467 Fix sonar issue about abstract classes

* MET-6467 Sonar issues

* MET-6467 Remove duplicate engine.

We tested loading and it's not needed now.

* MET-6467 Sonar issues

* MET-6467 PluginExecutor tests

* MET-6467 Update poms

* MET-6467 Clean up test

* MET-6467 EcloudEngineTaskClient test

* MET-6467 Cleanup

* MET-6467 EcloudEngineDatasetRecordClient test

* MET-6467 Fix local deployment docker compose components

* MET-6467 EcloudEngineRecordStatisticsConverter test

* MET-6467 Sonar issues

* MET-6467 Process review

* MET-6467 Process review